--- a/Nutricionista/src/Vista/RegistroIF.form
+++ b/Nutricionista/src/Vista/RegistroIF.form
@@ -473,11 +473,11 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Detalle:"/>
+                    <Property name="text" type="java.lang.String" value="Objetivo:"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="100" y="10" width="60" height="30"/>
+                      <AbsoluteConstraints x="90" y="10" width="60" height="30"/>
                     </Constraint>
                   </Constraints>
                 </Component>
